--- a/jpIdem-spring4/src/main/resources/META-INF/resources/jpIdem/job.html
+++ b/jpIdem-spring4/src/main/resources/META-INF/resources/jpIdem/job.html
@@ -16,9 +16,12 @@
 </head>
 <body>
 <div class="container-fluid">
-    <nav class="navbar navbar-default" role="navigation">
+    <nav class="navbar navbar-default" role="navigation" style="box-shadow: 10px 10px 5px #888888;">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">JpIdem Job任务管理平台</a>
+            <a class="navbar-brand" href="#" style="padding-left: 800px;
+                text-shadow: #946363 3px 4px 6px;
+                color: #b35959;
+                font-weight: bolder;">JpIdem Job 冥等数据任务管理平台</a>
         </div>
     </nav>
 </div>
@@ -29,8 +32,8 @@
                 <td style="width: 20%;text-align:center">identity</td>
                 <td style="width: 22%;text-align:center;">名称</td>
                 <td style="width: 10%;text-align:center;">执行周期</td>
-                <td style="width: 8%;text-align:center;">下次重试时间</td>
-                <td style="width: 17%;text-align:center;">待数据冥等任务数</td>
+                <td style="width: 15%;text-align:center;">下次重试时间</td>
+                <td style="width: 10%;text-align:center;">待数据冥等任务数</td>
                 <td style="width: 8%;text-align:center;">状态</td>
                 <td style="width: 15%;text-align:center;">操作</td>
             </tr>
